--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    box-sizing: border-box;
+}
+
+@font-face {
+    font-family: 'Intel One Mono';
+    src: url('https://github.com/intel/intel-one-mono/raw/main/fonts/woff2/IntelOneMono-Light.woff2');
+}
